<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        app:cardMaxElevation="4dp"
        android:layout_margin="4dp"
        app:cardUseCompatPadding="true"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:showIn="@layout/fragment_rgb">

        <TextView
                android:id="@+id/udpIpAddressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/ip_address"
                app:layout_constraintBottom_toBottomOf="@+id/udpIpAddressEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/udpIpAddressEditText"/>

        <EditText
                android:id="@+id/udpIpAddressEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/_192_168_x_x"
                android:text="@string/_192_168_5_105_default_val"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/udpIpAddressTextView"

                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/udpPortTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port"
                app:layout_constraintBottom_toBottomOf="@+id/udpPortEditText"
                app:layout_constraintStart_toStartOf="@+id/udpIpAddressTextView"
                app:layout_constraintTop_toTopOf="@+id/udpPortEditText"/>

        <EditText
                android:id="@+id/udpPortEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/xxxxx_hint"
                android:text="@string/_4000_defaultPort"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/udpIpAddressEditText"
                app:layout_constraintStart_toStartOf="@+id/udpIpAddressEditText"/>

        <ToggleButton
                android:id="@+id/toggleConnectionButton"
                android:layout_width="88dp"
                android:layout_height="40dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.966"
                android:switchMinWidth="80dp"
                android:textOn="@string/on"
                android:textOff="@string/off"
                android:switchPadding="19dp"
                android:thumbTextPadding="4dp"
                android:showText="true"
                app:layout_constraintTop_toBottomOf="@+id/udpPortEditText"/>

        <SeekBar
                android:id="@+id/redSeekBar"
                android:layout_width="363dp"
                android:layout_height="@dimen/rgbSeekBarWitdh"
                android:max="255"
                android:progress="128"
                android:progressTint="@color/red"
                android:thumbTint="@color/red"
                app:layout_constraintEnd_toEndOf="@+id/udpPortEditText"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/toggleConnectionButton"

                />

        <SeekBar
                android:id="@+id/greenSeekBar"
                android:layout_width="0dp"
                android:layout_height="@dimen/rgbSeekBarWitdh"
                android:layout_marginTop="8dp"
                android:max="255"
                android:progress="128"
                android:progressTint="@color/green"
                android:thumbTint="@color/green"
                app:layout_constraintEnd_toEndOf="@+id/redSeekBar"

                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/redSeekBar"
                app:layout_constraintTop_toBottomOf="@+id/redSeekBar"/>

        <SeekBar
                android:id="@+id/blueSeekBar"
                android:layout_width="0dp"
                android:layout_height="@dimen/rgbSeekBarWitdh"
                android:layout_marginTop="8dp"
                android:max="255"
                android:progress="128"
                android:progressTint="@color/blue"
                android:thumbTint="@color/blue"


                app:layout_constraintEnd_toEndOf="@+id/greenSeekBar"

                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/greenSeekBar"
                app:layout_constraintTop_toBottomOf="@+id/greenSeekBar"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="39dp"/>

        <TextView
                android:text="@string/send_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/udpPortTextView"
                app:layout_constraintTop_toTopOf="@+id/toggleConnectionButton"
                app:layout_constraintBottom_toBottomOf="@+id/toggleConnectionButton"
                app:layout_constraintVertical_bias="0.482"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:background="@color/divider"
                app:layout_constraintTop_toBottomOf="@+id/blueSeekBar"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>


    